updates(board and rows): fix flex items justfiy and align

--- a/src/components/row/row.css
+++ b/src/components/row/row.css
@@ -11,7 +11,10 @@
 }
 .mini-span {
     width: 3em;
-    flex: 2;
+    flex: 4;
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
 }
 .mini-span-small {
     width: 3em;
@@ -19,7 +22,7 @@
 }
 .span-name {
     font-weight: bold;
-    width: 20em;
+    flex: 5;
     color: #25213B;
 
 }
@@ -30,6 +33,9 @@
     flex-flow: column;
     align-items: center;
 }
+.desc {
+    align-items: flex-start;
+}
 input {
     background-color: #9f9f9f;
     width: 0.8em;
@@ -38,7 +44,8 @@ input {
     font-weight: bold;
     padding: 0.2em;
     border-radius: 0.3em;
-    align-items: center;
+    align-items: flex-start;
+    /* align-items: center; */
 }
 .invalid {
     color: #8C70FF;
